# picomodel

./: .gitignore  COPYING  Makefile.am  README.md  configure.ac  libpicomodel.pc.in
src/: .gitignore  Makefile.am  picointernal.c  picointernal.h  picomodel.c  picomodel.h  picomodules.c  pm_3ds.c  pm_ase.c  pm_fm.c  pm_fm.h  pm_lwo.c  pm_md2.c  pm_md3.c  pm_mdc.c  pm_ms3d.c  pm_obj.c  pm_terrain.c
src/lwo/: clip.c  envelope.c  list.c  lwio.c  lwo2.c  lwo2.h  lwob.c  pntspols.c  surface.c  vecmath.c  vmap.c
